# repolens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
repolens/: __init__.py  ai_narrative.py  analysis.py  cli.py  git_reader.py  report.py
tests/: test_analysis.py
